// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Buttons/IconButtons plain: Components/Buttons/IconButtons plain 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c1.c1 {
  padding: 0;
  width: 20px;
  height: 20px;
  color: #0684bd;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 0;
}

.c1.c1 .icon,
.c1.c1 .icon svg {
  font-size: 20px;
}

.c1.c1:hover {
  background-color: transparent;
}

.c1.c1:hover .icon {
  color: rgba(6,132,189,0.88);
}

.c1.c1:active .icon {
  color: #0684bd;
}

.c1.c1.c1.c1.disabled {
  background-color: inherit;
}

.c1.c1.c1.c1.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c1.c1 .rippleVisible {
  color: #0684bd;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c0 {
  margin-right: 20px;
}

<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <div
    className="c0"
  >
    <button
      aria-label="add"
      className="MuiButtonBase-root MuiIconButton-root c1"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
      variant="plain"
    >
      <span
        className="MuiIconButton-label"
      >
        <span
          className="  icon c2"
        >
          <svg
            className="c3"
            role="img"
          >
            <use
              href="#undefined"
              xlinkHref="#undefined"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Buttons/IconButtons round: Components/Buttons/IconButtons round 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c1.c1 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #0684bd;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 50%;
}

.c1.c1 .icon,
.c1.c1 .icon svg {
  font-size: 20px;
}

.c1.c1:hover {
  background-color: rgba(6,132,189,0.12);
}

.c1.c1:hover .icon {
  color: rgba(6,132,189,0.88);
}

.c1.c1:active .icon {
  color: #0684bd;
}

.c1.c1.c1.c1.disabled {
  background-color: inherit;
}

.c1.c1.c1.c1.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c1.c1 .rippleVisible {
  color: #0684bd;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c0 {
  margin-right: 20px;
}

<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <div
    className="c0"
  >
    <button
      aria-label="I'm a star"
      className="MuiButtonBase-root MuiIconButton-root c1"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
      variant="round"
    >
      <span
        className="MuiIconButton-label"
      >
        <span
          className="  icon c2"
        >
          <svg
            className="c3"
            role="img"
          >
            <use
              href="#undefined"
              xlinkHref="#undefined"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;
